--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>mora</title>
 </head>
 <body>
     <svg width="10" height="10">
-        <rect x="0" y="0" width="10" height="10" fill="blue" />
+        <rect x="0" y="0" width="100" height="100" fill="blue" />
       </svg>
 </body>
 </html>
